# swagger/docs.yaml
@@ -175,6 +175,157 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DefaultError'
+  /app/messages/{id}:
+    get:
+      security:
+        - api_key: []
+      tags: [message]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The message ID
+      responses:
+        200:
+          description: Message details retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        400:
+          description: Error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultError'
+    delete:
+      tags: [message]
+      security:
+        - api_key: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The message ID
+      responses:
+        204:
+          description: Message deleted
+        400:
+          description: Error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultError'
+  
+  /app/messages/{id}/read:
+    patch:
+      tags: [message]
+      security:
+        - api_key: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The message ID
+      responses:
+        200:
+          description: Message marked as read
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        400:
+          description: Error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultError'
+
+  /app/messages:
+    get:
+      tags: [message]
+      security:
+        - api_key: []
+      parameters:
+        - in: query
+          name: status
+          schema:
+            type: string
+          description: The message status
+        - in: query
+          name: retries
+          schema:
+            type: integer
+          description: The number of retries
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: The number of messages to retrieve
+        - in: query
+          name: userId
+          schema:
+            type: string
+          description: The user being targeted
+        - in: query
+          name: read
+          schema:
+            type: boolean
+          description: If the message has been read
+
+      responses:
+        200:
+          description: Message details retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedMessages'
+        400:
+          description: Error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultError'
+    delete:
+      tags: [message]
+      security:
+        - api_key: []
+      parameters:
+        - in: query
+          name: status
+          schema:
+            type: string
+          description: The message status
+        - in: query
+          name: retries
+          schema:
+            type: integer
+          description: The number of retries
+        - in: query
+          name: userId
+          schema:
+            type: string
+          description: The user being targeted
+        - in: query
+          name: read
+          schema:
+            type: boolean
+          description: If the message has been read
+      responses:
+        204:
+          description: Message deleted
+        400:
+          description: Error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultError'
 
 components:
   schemas:
@@ -393,8 +544,192 @@ components:
               description: The creation date of the app
               examples:
                 - '2021-06-23T09:30:00Z'
-      
-    
+    MessageResponse:
+      type: object
+      required:
+        - status
+        - message
+        - errors
+        - data
+      properties:
+        status:
+          type: number
+          description: Status code
+          examples:
+            - 200
+        message:
+          type: string
+          description: Resposne message
+          examples: 
+            - 'Response Successful'
+        errors:
+          type: object
+          description: Empty
+          examples:
+            - {}
+        data:
+          type: object
+          description: The message object
+          $ref: '#/components/schemas/MessageComponent' 
+          required:
+            - _id
+            - created
+            - appId
+            - nType
+            - userId
+            - read
+            - status
+            - retries
+          properties:
+            _id:
+              type: string
+              description: The ID of the message
+              examples:
+                - '60d2ee9f292a3e2d8c3656f2'
+            created:
+              type: string
+              format: date-time
+              description: The creation date of the message
+              examples:
+                - '2021-06-23T09:30:00Z'
+            appId:
+              type: string
+              description: The ID of the app the message belongs to
+              examples:
+                - '60d2ee9f292a3e2d8c3656f2'
+            nType:
+              type: string
+              description: THe type of notification
+              examples:
+                - fcm
+                - email
+                - sms
+            userId:
+              type: string
+              description: The ID of the user the message belongs to
+              examples:
+                - '60d2ee9f292a3e2d8c3656f2'
+            read:
+              type: boolean
+              description: IF the message has been read
+              examples:
+                - false
+            status:
+              type: string
+              description: The state of the message
+              examples:
+                - PENDING
+            retries:
+              type: number
+              description: The number of times the message was resent due to errors
+              examples:
+                - 0 
+                  
+    PaginatedMessages:
+        type: object
+        required:
+          - status
+          - message
+          - errors
+          - data
+        properties:
+          status:
+            type: number
+            description: Status code
+            examples:
+              - 200
+          message:
+            type: string
+            description: Resposne message
+            examples: 
+              - 'Response Successful'
+          errors:
+            type: object
+            description: Empty
+            examples:
+              - {}
+          data:
+            type: object
+            description: The message object paginated list
+            required:
+              - prev
+              - next
+              - messages
+            properties:
+              prev:
+                type: number
+                description: The previous page number
+                examples:
+                  1
+              next:
+                type: number
+                description: The previous page number
+                examples:
+                  1
+              messages:
+                type: array
+                description: A list of retrieved messages
+                items:
+                  type: object
+                  description: The message object proper
+                  $ref: '#/components/schemas/MessageComponent' 
+
+    MessageComponent:
+      type: object
+      required:
+        - _id
+        - created
+        - appId
+        - nType
+        - userId
+        - read
+        - status
+        - retries
+      properties:
+        _id:
+          type: string
+          description: The ID of the message
+          examples:
+            - '60d2ee9f292a3e2d8c3656f2'
+        created:
+          type: string
+          format: date-time
+          description: The creation date of the message
+          examples:
+            - '2021-06-23T09:30:00Z'
+        appId:
+          type: string
+          description: The ID of the app the message belongs to
+          examples:
+            - '60d2ee9f292a3e2d8c3656f2'
+        nType:
+          type: string
+          description: THe type of notification
+          examples:
+            - fcm
+            - email
+            - sms
+        userId:
+          type: string
+          description: The ID of the user the message belongs to
+          examples:
+            - '60d2ee9f292a3e2d8c3656f2'
+        read:
+          type: boolean
+          description: IF the message has been read
+          examples:
+            - false
+        status:
+          type: string
+          description: The state of the message
+          examples:
+            - 'PENDING'
+        retries:
+          type: number
+          description: The number of times the message was resent due to errors
+          examples:
+            - 0
+ 
   securitySchemes:
     api_key:
       type: apiKey
